--- a/Project1/index.html
+++ b/Project1/index.html
@@ -2,12 +2,21 @@
 <html>
     <head>
         <title> DFSDFASFSDFASdf </title>
+
         <meta charset="utf-8">
+
         <script src="script.js"></script>
+
+        <link rel="icon" type="image/x-icon" href="gojo2.jpeg">
     </head>
+
     <body>
         <p id="para"></p>
+
         <button id="firstbutton" onclick="H()">Название кноооооопкиииии</button>
         
+        <input id="number" type="text">
+
+        <table id="asd" title="ВАФЫВАФЫВП" ></table>
     </body>
 </html>
